--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -7,6 +7,12 @@
 <h3>Patients:</h3>
 <ul>
   <% @doctor.find_patients.each do |patient| %>
-    <li><%= patient.name %></li>
+    <li id='patient_<%= patient.id %>'>
+      <%= patient.name %>
+      <%= render partial: 'delete_doctor_patient', locals: {
+        doctor_patient: patient.find_doctor_patient(@doctor),
+        doctor_id: @doctor.id
+      } %>
+    </li>
   <% end %>
 </ul>
